CHANGES
=======

1.0 (unreleased)
----------------

- Using event system in ZopeConnector to invalidate caches.
- Fixed a bug when getting NULLResources or other resources w/o etag (bug
  #4315).

0.22 (2008-06-23)
-----------------

- Mock: Allowed to get the root as resource.

0.21 (2008-06-16)
-----------------

- Make sure 'NoneType' object has no attribute 'group' doesn't occur anymore.
- Make sure XML-like content can be put in a property by prefixing it. This is
  a temporary fix until it is decided what the DAV server will do in this case.
- Added a DataManager where the connector can register things to clean up on
  transaction abort.
- Sending User-Agent "zeit.connector"

0.20 (2008-06-10)
-----------------

- General code cleanup
- Explicitly reading all data from response instead of brutally closing the
  connection.
- Use lxml to generate xml instead of string-concatenation in most places.

0.19 (2008-05-23)
-----------------

- Fixed better lock handling from 0.17
- Only invalidating parent of a resource when parent actually has changed.

0.18 (2008-05-19)
-----------------

- Fixed a bug in the cache sweeping which did not remove the actual data.
- Diversified cache keys by reversing unique_id. Objects which are close in the
  tree should now be in differend BTree buckets.

0.17 (2008-05-19)
-----------------

- Better lock handling: always look for definete information on the server
  before locking/unlocking or doing anything with a lock. 
- Removed the live searching tests.

0.16 (2008-05-13)
-----------------

- Moved ZopeConnector to sperate module.
- Keep HTTP connection open for better performance. Connections will be closed
  at the end of the transaction (ZopeConnector).

0.15 (2008-04-28)
-----------------

- Fixed a bug in copy code which was not invalidating the caches correctly.

0.14 (2008-04-22)
-----------------

- `zeit.connector.connector.Connector` doesn't use the component architecture