@@ -7,6 +7,8 @@ CHANGES
 - Using event system in ZopeConnector to invalidate caches.
 - Fixed a bug when getting NULLResources or other resources w/o etag (bug
   #4315).
+- Make sure connector continues to work when the connection gets into an
+  inconsistent state (bug #4109).
 
 0.22 (2008-06-23)
 -----------------
